[gd_scene load_steps=2 format=3 uid="uid://c264ukgaju7ja"]

[ext_resource type="Script" uid="uid://dpcs50vp3nfhf" path="res://scripts/CombatEntity.gd" id="1_3jpi8"]

[node name="CombatEntity" type="CharacterBody2D"]
script = ExtResource("1_3jpi8")

[node name="AttackCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
